--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@font-face {
+    font-family: 'VinqueRg-Regular';
+    src: url('assets/fonts/ofont.ru_Vinque Rg.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'HelveticaNeueCyr-Black';
+    src: url('assets/fonts/ofont.ru_Helvetica Neue.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(45deg, #ff9a9e, #fad0c4);
+    font-family: 'VinqueRg-Regular', sans-serif;
+    background: linear-gradient(95deg, #2e7345, #050505);
     margin: 0;
     padding: 0;
     display: flex;
@@ -10,6 +21,7 @@ body {
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
+    color: #b5c99a;
 }
 
 html, body {
@@ -26,14 +38,15 @@ html, body {
 }
 
 .title {
-    font-size: 1.8em;
-    color: white;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    font-family: 'HelveticaNeueCyr-Black', sans-serif;
+    font-size: 2em;
+    color: #b5c99a;
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.7);
 }
 
 .video-section, .image-section {
     margin-top: 20px;
-    background: white;
+    background: linear-gradient(270deg, rgba(48,120,72, 0.8), rgba(5, 5, 5, 0.8));
     padding: 15px;
     border-radius: 10px;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
@@ -46,35 +59,50 @@ video {
 }
 
 .play-button {
+    font-family: 'VinqueRg-Regular', sans-serif;
     margin-top: 10px;
     padding: 10px 15px;
     font-size: 1em;
-    background-color: #ff6f61;
-    color: white;
-    border: none;
+    background-color: #2c382b;
+    color: #b5c99a;
+    border: 2px solid #4d5e3b;
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
 }
 
 .play-button:hover {
-    background-color: #ff3b2f;
+    background-color: #3a4b37;
+    transform: scale(1.05);
+}
+
+.play-button::before {
+    content: "⊝";
+    font-size: 1.2em;
+}
+.play-button::after {
+    content: "⊝";
+    font-size: 1.2em;
 }
 
 .caption {
-    font-size: 1em;
+    font-size: 1.5em;
     margin-top: 10px;
-    color: #333;
+    color: #b5c99a;
 }
 
 .quote {
     font-style: italic;
-    font-size: 1.1em;
-    color: #555;
+    font-size: 1.2em;
+    color: #8fa382;
     margin: 10px 0;
     padding: 10px;
-    border-left: 4px solid #ff6f61;
-    background: rgba(255, 111, 97, 0.1);
+    border-left: 4px solid #4d5e3b;
+    background: rgba(18, 26, 20, 0.7);
     display: inline-block;
 }
 
@@ -88,13 +116,16 @@ video {
 
 .final-quote {
     font-style: italic;
-    font-size: 1.1em;
-    color: #555;
+    color: #8fa382;
     margin: 10px 0;
     padding: 10px;
-    background: rgba(255, 111, 97, 0.1);
+    background: rgba(18, 26, 20, 0.8);
     display: inline-block;
     border-radius: 10px;
+}
+
+strong, b {
+    text-shadow: -0.1px 0, 0 0.1px, 0.1px 0, 0 -0.1px, -0.1px -0.1px, 0.1px 0.1px, -0.1px 0.1px, 0.1px -0.1px;
 }
 
 @keyframes fadeIn {
@@ -132,6 +163,6 @@ video {
     }
 
     .caption {
-        font-size: 0.85em;
+        font-size: 20px;
     }
 }
